--- a/jade/index.jade
+++ b/jade/index.jade
@@ -19,12 +19,6 @@ html
 
   body
     // body layout
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-43758422-1', 'geordanr.github.io');
 
     .tabbable.hidden-print
       ul.nav.nav-pills
@@ -124,7 +118,7 @@ html
     script(src=`bootstrap/js/bootstrap.min.js?${now_ts}`)
     script(src=`select2-3.4.0/select2.min.js?${now_ts}`)
     script(src=`bower_components/jquery.qrcode/js/jquery-qrcode.min.js?${now_ts}`)
-    script(src=`javascripts/xwing.min.js?${now_ts}`)
+    script(src=`javascripts/xwing.js?${now_ts}`)
     script
       :coffee-script
         $ ->
@@ -139,26 +133,6 @@ html
               window.location.replace '?f=Scum and Villainy'
 
           $('.site-placeholder').text """http://\#{window.location.host}\#{window.location.pathname}"""
-          $('#rebelTab').click (e) ->
-            ga 'send', 'pageview',
-              page: '/rebels'
-              title: 'Rebel Alliance'
-          $('#empireTab').click (e) ->
-            ga 'send', 'pageview',
-              page: '/empire'
-              title: 'Galactic Empire'
-          $('#scumTab').click (e) ->
-            ga 'send', 'pageview',
-              page: '/scum'
-              title: 'Scum and Villainy'
-          $('#browserTab').click (e) ->
-            ga 'send', 'pageview',
-              page: '/browser'
-              title: 'Card Browser'
-          $('#aboutTab').click (e) ->
-            ga 'send', 'pageview',
-              page: '/about'
-              title: 'About'
 
           window.rebel_sb = new window.SquadBuilder
               tab: '#rebelTab'
@@ -183,24 +157,12 @@ html
 
           switch $.getParameterByName 'f'
             when 'Rebel Alliance'
-                ga 'send', 'pageview',
-                  page: '/rebels'
-                  title: 'Rebel Alliance'
                 $('#rebelTab').tab 'show'
             when 'Galactic Empire'
-                ga 'send', 'pageview',
-                  page: '/empire'
-                  title: 'Galactic Empire'
                 $('#empireTab').tab 'show'
             when 'Scum and Villainy'
-                ga 'send', 'pageview',
-                  page: '/scum'
-                  title: 'Scum and Villainy'
                 $('#scumTab').tab 'show'
             else
-                ga 'send', 'pageview',
-                  page: '/rebels'
-                  title: 'Rebel Alliance'
                 $('#rebelTab').tab 'show'
 
           window.backend = new SquadBuilderBackend
@@ -244,4 +206,3 @@ html
     | &nbsp;
   span(style="font-family: XWingShip")
     | &nbsp;
-img.hidden(src="images/xws-obstacles.png")
