adjusted Tooltip to show chassis information added custom styles for the new chassis and pilot containers in the tooltip added a modifier function to x-wing chassis reacon x

--- a/stylesheets/xwing.sass
+++ b/stylesheets/xwing.sass
@@ -168,10 +168,16 @@ i.xwing-miniatures-font-shield
   font-weight: bold
   vertical-align: top
   padding-right: 5px
+  
+.pilot-label, .chassis-label
+  display: inline
+  
+.chassis-text, .pilot-text
+  padding-left: 3px
 
 .info-text
   margin-top: 15px
-
+  
 .squad-name-container
   padding-top: 5px
   font-size: 1.2em
