removed all but supremacy upgrades

--- a/stylesheets/xwing.sass
+++ b/stylesheets/xwing.sass
@@ -270,6 +270,9 @@ input[type=number]
 .content-warning
   color: white
   font-size: 0.75em
+  
+.content-warning.unreleased-content-used
+  display: none
 
 .game-type-selector
   width: 8em
