--- a/stylesheets/xwing.css
+++ b/stylesheets/xwing.css
@@ -240,6 +240,9 @@ input[type=number] {
   color: white;
   font-size: 0.75em; }
 
+.content-warning.unreleased-content-used {
+  display: none; }
+
 .game-type-selector {
   width: 8em; }
 
