--- a/jade/index.jade
+++ b/jade/index.jade
@@ -2,7 +2,7 @@ doctype html
 - var now_ts = parseInt(new Date().getTime() / 1000)
 html
   head
-    title (Yet Another) X-Wing Miniatures Squad Builder
+    title X-Wing Supremacy Squad Builder
     meta(charset="utf-8")
 
     link(rel="stylesheet", href=`bootstrap/css/bootstrap.min.css?${now_ts}`)
