minified version of xwing.js fixed typo in proton bomb

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -118,7 +118,7 @@ html
     script(src=`bootstrap/js/bootstrap.min.js?${now_ts}`)
     script(src=`select2-3.4.0/select2.min.js?${now_ts}`)
     script(src=`bower_components/jquery.qrcode/js/jquery-qrcode.min.js?${now_ts}`)
-    script(src=`javascripts/xwing.js?${now_ts}`)
+    script(src=`javascripts/xwing.min.js?${now_ts}`)
     script
       :coffee-script
         $ ->
