updated havoc and long probe titles to show modified maneuvers. colored ordinance icons from chassis munitions

--- a/stylesheets/xwing.sass
+++ b/stylesheets/xwing.sass
@@ -259,9 +259,6 @@ ul.nav
 input[type=number]
   width: 3em
 
-.red
-  color: red
-
 .squad-notes
   height: 8em
   width: 100%
@@ -327,3 +324,9 @@ svg > g.maneuver.backwards
 
 .gray
   color: gray
+  
+i.xwing-miniatures-font.red
+  color: red
+
+i.xwing-miniatures-font.blue
+  color: #33adff
