updated chassis maneuvers colored munitions icons

--- a/stylesheets/xwing.css
+++ b/stylesheets/xwing.css
@@ -228,9 +228,6 @@ ul.nav li.dropdown ul.dropdown-menu li:hover {
 input[type=number] {
   width: 3em; }
 
-.red {
-  color: red; }
-
 .squad-notes {
   height: 8em;
   width: 100%;
@@ -292,3 +289,9 @@ svg > g.maneuver.backwards {
 
 .gray {
   color: gray; }
+
+i.xwing-miniatures-font.red {
+  color: red; }
+
+i.xwing-miniatures-font.blue {
+  color: #33adff; }
