--- a/stylesheets/xwing.sass
+++ b/stylesheets/xwing.sass
@@ -312,7 +312,6 @@ svg > g.maneuver.backwards
   transform: translate(200px, 200px) rotate(180deg)
   
 
-.xwing-miniatures-font.xwing-miniatures-font-boost,
 .xwing-miniatures-font.xwing-miniatures-font-bankleft,
 .xwing-miniatures-font.xwing-miniatures-font-bankright,
 .xwing-miniatures-font.xwing-miniatures-font-turnleft,
@@ -320,6 +319,11 @@ svg > g.maneuver.backwards
 .xwing-miniatures-font.xwing-miniatures-font-straight
   font-size: 1.3em
   top: 1px
+  position: relative
+  
+.xwing-miniatures-font.xwing-miniatures-font-boost
+  font-size: 1.25em
+  top: -1px
   position: relative
 
 .gray
