--- a/stylesheets/xwing.css
+++ b/stylesheets/xwing.css
@@ -277,7 +277,6 @@ li.squad-summary {
 svg > g.maneuver.backwards {
   transform: translate(200px, 200px) rotate(180deg); }
 
-.xwing-miniatures-font.xwing-miniatures-font-boost,
 .xwing-miniatures-font.xwing-miniatures-font-bankleft,
 .xwing-miniatures-font.xwing-miniatures-font-bankright,
 .xwing-miniatures-font.xwing-miniatures-font-turnleft,
@@ -285,6 +284,11 @@ svg > g.maneuver.backwards {
 .xwing-miniatures-font.xwing-miniatures-font-straight {
   font-size: 1.3em;
   top: 1px;
+  position: relative; }
+
+.xwing-miniatures-font.xwing-miniatures-font-boost {
+  font-size: 1.25em;
+  top: -1px;
   position: relative; }
 
 .gray {
