--- a/stylesheets/xwing.css
+++ b/stylesheets/xwing.css
@@ -26,6 +26,9 @@
   font-family: BankGothicHD;
   src: url("../fonts/bankgthd.ttf"); }
 
+body {
+  background-color: #090909; }
+
 body, button {
   font-family: EurostileStandard; }
 
@@ -43,13 +46,26 @@ strong em, em strong {
   font-weight: normal; }
 
 .nav-pills {
-  border-bottom: thin solid darkgray; }
+  border-bottom: thin solid darkgray;
+  background-color: #b63d32; }
+
+.nav-pills a {
+  color: white; }
+
+.nav.nav-pills > li > a:hover {
+  background-color: #090909;
+  color: #eeeeee; }
+
+.nav.nav-pills > .active > a,
+.nav.nav-pills > li > a:focus {
+  background-color: #eeeeee;
+  color: #090909; }
 
 .ship-container > .row-fluid {
   padding: 10px 0px; }
 
 .ship {
-  border: medium solid black; }
+  border: medium solid #090909; }
 
 .card-stat, .info-data.info-skill, .info-data.info-attack, .info-data.info-energy, .info-data.info-agility, .info-data.info-hull, .info-data.info-shields, .info-maneuvers table > tbody > tr > td:first-child {
   font-family: kimberley;
@@ -59,7 +75,7 @@ strong em, em strong {
   color: #CD6D2D; }
 
 .card-icon, i.xwing-miniatures-font-attack, i.xwing-miniatures-font-attack-turret, i.xwing-miniatures-font-attack-frontback, i.xwing-miniatures-font-attack-180, i.xwing-miniatures-font-attack-bullseye, i.xwing-miniatures-font-energy, i.xwing-miniatures-font-agility, i.xwing-miniatures-font-hull, i.xwing-miniatures-font-shield {
-  background: black;
+  background: #090909;
   border-radius: 50%;
   padding: 3px;
   font-weight: normal; }
@@ -140,7 +156,7 @@ i.xwing-miniatures-font-shield {
   font-style: italic; }
 
 .info-well {
-  color: black;
+  color: #090909;
   margin-top: 10px; }
 
 .info-well table > tbody > tr > td:first-child {
@@ -171,7 +187,7 @@ ul.squad-list {
 
 .points-display-container {
   font-size: 1.2em;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #090909;
   padding-top: 5px;
   text-align: center; }
 
@@ -179,7 +195,7 @@ ul.squad-list {
   padding: 5px 0px; }
 
 .modal {
-  color: black; }
+  color: #090909; }
 
 .icon {
   background-image: url("../images/xwing-icons.png");
@@ -197,7 +213,7 @@ select.card-selector {
 
 .fancy-list .info-data {
   vertical-align: middle;
-  -webkit-text-stroke: 0.5px black; }
+  -webkit-text-stroke: 0.5px #090909; }
 
 .simple-list {
   font-family: Arial,Helvetica,sans-serif;
@@ -299,3 +315,12 @@ i.xwing-miniatures-font.red {
 
 i.xwing-miniatures-font.blue {
   color: #33adff; }
+
+.btn.btn-primary:not(.btn-danger) {
+  background-color: #1485CC;
+  background-image: unset; }
+
+.btn.btn-primary:not(.btn-danger):hover {
+  background-color: #1485CC;
+  opacity: 0.8;
+  background-image: unset; }
